ingress/ingress-mainsite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainsite-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "default-https-redirect@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
  - hosts:
    - agrohacksstuff.io
    - www.agrohacksstuff.io
    secretName: agrohacksstuff.io
  rules:
  - host: agrohacksstuff.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: main-site-service
              port:
                number: 80
  - host: www.agrohacksstuff.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: main-site-service
              port:
                number: 80
